--- a/zerobank-qa-automation/pom.xml
+++ b/zerobank-qa-automation/pom.xml
@@ -58,6 +58,14 @@
             <scope>provided</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -71,4 +79,3 @@
         </plugins>
     </build>
 </project>
-
