--- a/zerobank-api/src/main/resources/application.properties
+++ b/zerobank-api/src/main/resources/application.properties
@@ -20,3 +20,9 @@ spring.jpa.defer-datasource-initialization=true
 #  Le dice a Hibernate que cree las tablas al iniciar
 #  y las borre al apagar. Perfecto para una BD en memoria.
 spring.jpa.hibernate.ddl-auto=create-drop
+# Inicialización de datos
+spring.sql.init.mode=always
+
+# Logging
+logging.level.org.springframework.security=DEBUG
+logging.level.com.zerobank=DEBUG
